<resources>
    <string name="app_name">Github App</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="repository">Repository</string>
    <string name="location">Location</string>
    <string name="company">Company</string>

    <string-array name="data_name">
        <item>Jake Wharton</item>
        <item>AMIT SHEKHAR</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="data_username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <integer-array name="data_img">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </integer-array>

    <integer-array name="data_follow">
        <item>12</item>
        <item>122</item>
        <item>31</item>
        <item>223</item>
        <item>641</item>
        <item>32</item>
        <item>1</item>
        <item>72</item>
        <item>122</item>
        <item>337</item>
    </integer-array>

    <integer-array name="data_follower">
        <item>200</item>
        <item>123</item>
        <item>54</item>
        <item>64</item>
        <item>121</item>
        <item>144</item>
        <item>185</item>
        <item>199</item>
        <item>31</item>
        <item>125</item>
    </integer-array>

    <string-array name="data_company">
        <item>Google, Inc.</item>
        <item>MindOrks OpenSource</item>
        <item>Google, Inc</item>
        <item>Google working on Android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>Gojek-Engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID | KotlinID | IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>
    
    <string-array name="data_location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <integer-array name="data_repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </integer-array>
</resources>